2012-08-22  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/carriers/priority_carrier/PriorityCarrier.h
	  src/yarpmanager/libymanager/include/broker.h
	  src/yarpmanager/libymanager/include/execstate.h: Add virtual
	  destructors to shut up warnings on Debian 4

2012-08-17  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/harness/ValueTest.cpp: fix checkReadWrite
	test to use floating point values [thanks Ugo Pattacini]

2012-08-08  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/libYARP_math/CMakeLists.txt: Do not link to both ATLAS
	  and GSL blas libraries

2012-08-06  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/yarpscope/src/Graph.cpp,
	  src/yarpscope/src/PortReader.cpp: Fix modulo operator for
	  negative values. This should fix the random spikes that
	  sometimes appear in the plot.
	* src/yarpscope/src/Debug.h: Handle debug for long long types.
	* src/yarpscope/src/PortReader.cpp: Remove annoying debug.
	* src/yarpscope/src/PortReader.cpp: Increment acquired data even
	  if using previous one. This could fix the plot moving in time.
	* src/yarpscope/src/MainWindow.cpp: Remove old unused stuff.
	  This fixes the SIGSEGV at exit on windows.
	* src/yarpscope/examples/test_yarpscope_wbd.xml: Add test for
	  wholeBodyDynamics [thanks Marco Randazzo]

2012-06-20  Marco Randazzo  <marco.randazzo@iit.it>
    *  src/libYARP_sig/src/Matrix.cpp
    added new methods: removeCol(), removeRow()

2012-08-03  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* conf/doxygen/Doxyfile.part.template (MAN_EXTENSION): move
	man pages to section 1 "Executable programs or shell commands"
	[thanks Daniele Domenichelli]

2012-08-03 Ugo Pattacini <ugo.pattacini@iit.it>
    * cart I/F: added set/getReferenceMode() methods

2012-08-02 Lorenzo Natale <lorenzo.natale@iit.it>
    * conf/template/YARPConfig.cmake.in
    * conf/YarpVersion.cmake

    Added YARP_SVN_REVISION number.

2012-07-31  Paul Fitzpatrick  <paul@robotrebuilt.com>
