@@ -1,0 +1,12 @@
+#demo.thrift
+service Demo {
+  i32 get_answer();
+  bool set_answer(1:i32 rightAnswer)
+  i32 add_one(1:i32 x);
+  bool start();
+  bool stop();
+  bool is_running();
+
+  void test_void(1:i32 x);
+  oneway void test_1way(1:i32 x);
+}
